[tool.poetry]
name = "crypto-trading-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
python-binance = "^1.0.17"
ta = "*"
pandas = "^2.3.0"
python-dotenv = "^1.1.1"
requests = "^2.32.4"
gspread = "^6.2.1"
oauth2client = "^4.1.3"
streamlit = "^1.46.1"
apscheduler = "^3.11.0"
firebase-admin = "^7.0.0"
feedparser = "^6.0.11"
vadersentiment = "^3.3.2"
aiohttp = "^3.12.15"
beautifulsoup4 = "^4.12.0"
lxml = "^4.9.0"
newspaper3k = "^0.2.8"
textblob = "^0.17.1"
xgboost = "*"
google-cloud-firestore = "^2.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"